# LabMon

./: .gitignore  DESIGN.md  PRODUCT.md  README.md  README.zh-CN.md  pyproject.toml
deploy/: install.sh  labmon.env.example  labmon.service
labmon/: __init__.py  app.py  auth.py  collectors.py  config.py  history.py  logs.py  nvidia.py
sample_logs/: vla_pretrain.out
scripts/: manage_users.py
static/: app.js  index.html  login.html  styles.css
static/designs/: skills-white.html  terminal-concepts.html
tests/: test_app.py  test_auth.py  test_collectors.py  test_config.py  test_logs.py  test_nvidia.py
