[project]
name = "labmon"
version = "0.1.0"
description = "Read-only lab GPU monitor for a shared four-card RTX 3090 server."
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.110,<1",
  "psutil>=5.9,<8",
  "uvicorn[standard]>=0.27,<1",
]

[dependency-groups]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8,<9",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
